--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Change or remove this page</h1>
+        <h1>API is up and running, head to: https://github.com/Christoffer-Nielsen-Cph/3sem_exam_backend for the endpoints</h1>
     </body>
 </html>
